<resources>
    <string name="app_name">XO Game Task</string>
    <string name="main_image_player_status">main_image_player_status</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="main_board">main_board</string>
    <string name="play_again">PLAY AGAIN</string>
    <string name="main_winning_line">main_winning_line</string>
</resources>