<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/main_board"
        android:layout_width="405dp"
        android:layout_height="401dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/main_board"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <ImageView
        android:id="@+id/main_image_8"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/_8"
        android:onClick="playTurn"
        android:tag="8"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/main_image_7"
        app:layout_constraintTop_toBottomOf="@+id/main_image_5"
        app:srcCompat="@drawable/empty" />

    <ImageView
        android:id="@+id/main_image_7"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/_7"
        android:onClick="playTurn"
        android:tag="7"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toStartOf="@+id/main_image_8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/main_image_6"
        app:layout_constraintTop_toBottomOf="@+id/main_image_4"
        app:srcCompat="@drawable/empty"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/main_image_6"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="128dp"
        android:contentDescription="@string/_6"
        android:onClick="playTurn"
        android:tag="6"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toStartOf="@+id/main_image_7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/main_image_3"
        app:srcCompat="@drawable/empty"
        tools:ignore="ImageContrastCheck,ImageContrastCheck" />

    <ImageView
        android:id="@+id/main_image_5"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/_5"
        android:onClick="playTurn"
        android:tag="5"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/main_image_4"
        app:layout_constraintTop_toBottomOf="@+id/main_image_2"
        app:srcCompat="@drawable/empty"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/main_image_4"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/_4"
        android:onClick="playTurn"
        android:tag="4"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toStartOf="@+id/main_image_5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/main_image_3"
        app:layout_constraintTop_toBottomOf="@+id/main_image_1"
        app:srcCompat="@drawable/empty"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/main_image_3"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/_3"
        android:onClick="playTurn"
        android:tag="3"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toStartOf="@+id/main_image_4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_image_0"
        app:srcCompat="@drawable/empty"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/main_image_2"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/_2"
        android:onClick="playTurn"
        android:tag="2"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/main_image_1"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/empty" />

    <ImageView
        android:id="@+id/main_image_1"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/_1"
        android:onClick="playTurn"
        android:tag="1"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toStartOf="@+id/main_image_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/main_image_0"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/empty"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/main_image_0"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/_0"
        android:onClick="playTurn"
        android:tag="0"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toStartOf="@+id/main_image_1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/empty" />

    <Button
        android:id="@+id/main_play_again"
        android:layout_width="259dp"
        android:layout_height="110dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="204dp"
        android:onClick="playAgain"
        android:text="@string/play_again"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_image_7" />

    <ImageView
        android:id="@+id/main_image_player_status"
        android:layout_width="wrap_content"
        android:layout_height="197dp"
        android:layout_marginTop="406dp"
        android:layout_marginBottom="128dp"
        android:contentDescription="@string/main_image_player_status"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/xplay" />

    <ImageView
        android:id="@+id/main_winning_line"
        android:layout_width="395dp"
        android:layout_height="387dp"
        android:contentDescription="@string/main_winning_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/empty" />

</androidx.constraintlayout.widget.ConstraintLayout>